# ENT-VLA-ROSWS

./: CLAUDE.md  README.md
data/trajectories/: traj_20260417_193847.json
docs/: ur_robot_manager_architecture.md
install/: local_setup.sh  setup.sh
install/aruco_interfaces/share/aruco_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/aruco_interfaces/share/aruco_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  aruco_interfacesConfig-version.cmake  aruco_interfacesConfig.cmake  aruco_interfaces__rosidl_typesupport_introspection_cExport.cmake  aruco_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_aruco_interfaces__rosidl_generator_cExport.cmake  export_aruco_interfaces__rosidl_generator_cppExport.cmake  export_aruco_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/aruco_interfaces/share/aruco_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/aruco_interfaces/share/aruco_interfaces/msg/: Marker.idl  Marker.msg  MarkerArray.idl  MarkerArray.msg
install/aruco_interfaces/share/aruco_interfaces/rust/: Cargo.toml  build.rs
install/gripper_interfaces/share/gripper_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gripper_interfaces/share/gripper_interfaces/action/: Gripper.action  Gripper.idl
install/gripper_interfaces/share/gripper_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_gripper_interfaces__rosidl_generator_cExport.cmake  gripper_interfacesConfig.cmake  (+8 more)
install/gripper_test/include/gripper_test/: gripper_action_node.hpp  gripper_node.hpp
install/gripper_test/lib/gripper_test/: gripper_action_node  gripper_node
install/gripper_test/share/gripper_test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nurse_bringup/share/nurse_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nurse_control/share/nurse_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nurse_interfaces/share/nurse_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nurse_perception/share/nurse_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nurse_planning/share/nurse_planning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_robot_manager/include/ur_robot_manager/: robot_types.h
install/ur_robot_manager/lib/ur_robot_manager/: ur_robot_manager_node
install/ur_robot_manager/share/ur_robot_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_robot_manager/share/ur_robot_manager/cmake/: ur_robot_managerConfig-version.cmake  ur_robot_managerConfig.cmake
install/ur_robot_manager/share/ur_robot_manager/config/calibration/: ur5e_dh_params.yaml
install/ur_robot_manager/share/ur_robot_manager/environment/: ament_prefix_path.dsv  path.dsv
install/ur_robot_manager_interfaces/share/ur_robot_manager_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
scripts/: robot_monitor.py  test_ur5e_control.py  ur_kinematics.py
scripts/install/: local_setup.sh  setup.sh
scripts/log/: latest_build
src/aruco_interfaces/: CMakeLists.txt
src/gripper_interfaces/: CMakeLists.txt
src/gripper_interfaces/action/: Gripper.action
src/gripper_interfaces/srv/: DriverEnable.srv  GripperCommand.srv  Modbus.srv  PosVelCurCtrl.srv  StopMotor.srv
src/gripper_test/: CMakeLists.txt
src/gripper_test/include/gripper_test/: gripper_action_node.hpp  gripper_node.hpp
src/gripper_test/launch/: gripper_launch.py
src/gripper_test/src/: gripper_action_node.cpp  gripper_node.cpp
src/nurse_bringup/: CMakeLists.txt
src/nurse_bringup/config/: camera_params.yaml  robot_params.yaml  vla_params.yaml
src/nurse_bringup/launch/: cameras_only_launch.py  full_system_launch.py  robot_only_launch.py
src/nurse_control/: package.xml  setup.cfg  setup.py
src/nurse_interfaces/: CMakeLists.txt  package.xml
src/nurse_interfaces/msg/: ObjectToken.msg  SafetySignal.msg
src/nurse_perception/: package.xml  setup.cfg  setup.py
src/nurse_planning/: package.xml  setup.cfg  setup.py
src/ros2_recorder/config/: recorder_config.yaml
src/ros2_recorder/launch/: cameras.launch.py  record_all.launch.py
src/ros2_recorder/nodes/: cam_viewer.py  recorder_node.py  simple_record.py
src/ur_robot_manager/: CMakeLists.txt
src/ur_robot_manager/config/calibration/: ur5e_dh_params.yaml
src/ur_robot_manager/include/ur_robot_manager/core/: ur_robot_manager.h
src/ur_robot_manager/include/ur_robot_manager/utils/: ur_kinematics.h
src/ur_robot_manager/src/core/: ur_robot_action_server.cpp  ur_robot_manager.cpp
src/ur_robot_manager/src/hardware/: ur_hardware.cpp
src/ur_robot_manager/src/nodes/: main_node.cpp
src/ur_robot_manager/src/utils/: robot_trajectory.cpp  ur_kinematics.cpp
src/ur_robot_manager_interfaces/: CMakeLists.txt  package.xml
src/ur_robot_manager_interfaces/msg/: DelayInfo.msg
(+527 files in other folders)
