<?xml version="1.0"?>
<package format="3">
  <name>nurse_control</name>
  <version>0.1.0</version>
  <description>Control nodes: VLA Executor, UR5e handover controller</description>
  <maintainer email="whysojjjjj@gmail.com">hrlsh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nurse_interfaces</depend>
  <depend>ur_robot_manager_interfaces</depend>
  <depend>gripper_interfaces</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
