<?xml version="1.0"?>
<package format="3">
  <name>nurse_perception</name>
  <version>0.1.0</version>
  <description>Perception nodes: SAM2S object tracking, Emergency Classifier</description>
  <maintainer email="whysojjjjj@gmail.com">hrlsh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nurse_interfaces</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
