<?xml version="1.0"?>
<package format="3">
  <name>nurse_planning</name>
  <version>0.1.0</version>
  <description>Planning nodes: Sequence Transformer Planner, Safety Gate</description>
  <maintainer email="whysojjjjj@gmail.com">hrlsh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nurse_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
